@@ -4,6 +4,7 @@ debsig-verify (0.24) UNRELEASED; urgency=medium
   * Rename gpgVerify() to sigVerify().
   * Add a new find_command() function.
   * Abstract the OpenPGP operations behind a frontend driver.
+  * Move checkSigExist() from misc to openpgp module.
   * Documentation:
     - Update .gpg keyring references to .pgp in man page.
     - Mention OpenPGP instead of gpg in generic code comments.
